Emscripten build available for sdl, ttf, image, mixer

--- a/cmd/wasmsdl/assets/index.html
+++ b/cmd/wasmsdl/assets/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-us">
   <body>
-    <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" tabindex=-1></canvas>
+    <canvas id="canvas" oncontextmenu="event.preventDefault()" tabindex=-1></canvas>
     <script type='text/javascript'>
       // As a default initial behavior, pop up an alert when webgl context is lost. To make your
       // application robust, you may want to override this behavior before shipping!
