--- a/cmd/wasmsdl/assets/index.html
+++ b/cmd/wasmsdl/assets/index.html
@@ -4,7 +4,9 @@
     <style>
     html, body, div, canvas {
       margin: 0;
-      padding: 0;
+      display: flex; 
+      align-items: center; 
+      justify-content: center;
     }
     </style>
     <canvas id="canvas" style="display: block;" oncontextmenu="event.preventDefault()"></canvas>
